Update payment detail response structure
